--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "description": "Node js major project-1",
   "main": "index.js",
   "scripts": {
-    "start":"nodemon index.js",
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Sidharth Jain",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1"
+    "cookie-parser": "^1.4.6",
+    "ejs": "^3.1.8",
+    "express": "^4.18.1",
+    "express-ejs-layouts": "^2.5.1",
+    "mongoose": "^6.3.8",
+    "nodemon": "^2.0.16"
   }
 }
